Synopsis asynchronous processing

--- a/workbench/client/src/app/routes/models/pages/model-list-page/model-list-page.component.html
+++ b/workbench/client/src/app/routes/models/pages/model-list-page/model-list-page.component.html
@@ -8,7 +8,7 @@
     <button
       type="button"
       (click)="importModel()"
-      class="ml-auto btn btn-secondary btn-sm text-white no-underline rounded-none"
+      class="btn btn-info btn-sm text-white rounded-none"
     >
       <etri-arrow-up-tray-icon type="solid" class="size-4"/>
       Import
@@ -16,7 +16,7 @@
     <button
       type="button"
       routerLink="/models/train"
-      class="btn btn-primary btn-sm text-white no-underline rounded-none">New
+      class="btn btn-primary btn-sm text-white rounded-none">New
     </button>
   </div>
 </section>
