--- a/workbench/client/src/app/routes/modeltypes/pages/modeltype-list-page/modeltype-list-page.component.html
+++ b/workbench/client/src/app/routes/modeltypes/pages/modeltype-list-page/modeltype-list-page.component.html
@@ -3,7 +3,8 @@
 <section class="section elevate flex gap-4">
   <etri-search-input
     class="inline-block grow max-w-lg"
-    (onKeyword)="keyword.set($event)"/>
+    (onKeyword)="keyword.set($event)"
+  />
   <button
     type="button"
     routerLink="/modeltypes/register"
