--- a/workbench/client/src/app/components/organisms/dialogs/table-preview-dialog/table-preview-dialog.component.html
+++ b/workbench/client/src/app/components/organisms/dialogs/table-preview-dialog/table-preview-dialog.component.html
@@ -1,15 +1,16 @@
 <etri-base-dialog
   [hiddenFooter]="true"
   (onClose)="onClose.emit()"
+  class="w-[90vw]"
 >
   <h1 header etriDialogHeader>{{ schema() }}.{{ table() }}</h1>
-  <div class="overflow-auto  min-h-[500px] h-[80vh]">
+  <div class="overflow-auto  min-h-[500px] h-[80vh] w-full">
     <table class="table table-xs">
-      <thead class="sticky top-0">
-      <tr class="bg-white">
-        <th>#</th>
+      <thead class="sticky top-0 bg-white">
+      <tr>
+        <th class="border-r border-zinc-200">#</th>
         @for (column of columns(); track $index) {
-          <th>{{ column }}</th>
+          <th class="border-r border-zinc-200 last:border-r-0">{{ column }}</th>
         }
       </tr>
       </thead>
@@ -23,10 +24,10 @@
         } @else {
           @for (row of data(); track $index) {
             <tr class="even:bg-zinc-50 hover:bg-zinc-100">
-              <th>{{ $index + 1 | number }}</th>
+              <th class="border-r border-zinc-200">{{ $index + 1 | number }}</th>
               @for (item of row; track $index; let i = $index) {
                 @if (isNumber(item)) {
-                  <td class="text-right">{{ item | number }}</td>
+                  <td class="text-right border-r border-zinc-200 last:border-r-0">{{ item | number }}</td>
                 } @else {
                   <td>{{ item }}</td>
                 }
