--- a/workbench/client/src/app/components/atoms/buttons/dashboard-button/dashboard-button.component.html
+++ b/workbench/client/src/app/components/atoms/buttons/dashboard-button/dashboard-button.component.html
@@ -1,6 +1,4 @@
-<button
-  type="button"
-  class="btn flex items-center justify-center rounded-xl aspect-square shadow h-[300px]"
->
-  <etri-plus-icon class="size-20 text-zinc-500" />
+<button type="button" class="btn btn-secondary btn-sm aspect-square w-fit">
+  <etri-plus-icon class="size-5 text-white"/>
 </button>
+
