--- a/workbench/client/src/app/routes/queries/pages/query-form-page/query-form-page.component.html
+++ b/workbench/client/src/app/routes/queries/pages/query-form-page/query-form-page.component.html
@@ -13,7 +13,7 @@
       <input
         formControlName="name"
         type="text"
-        placeholder="e.g. tablegan"
+        placeholder="e.g. test query"
         class="grow"
       />
     </label>
