--- a/workbench/client/src/app/routes/databases/pages/database-form-page/database-form-page.component.html
+++ b/workbench/client/src/app/routes/databases/pages/database-form-page/database-form-page.component.html
@@ -27,7 +27,7 @@
       <!-- <option value="oracle">Oracle</option> -->
       <option value="postgresql">PostgreSQL</option>
       <option value="tibero">Tibero</option>
-      <option value="redshift">Redshift</option>
+      <!-- <option value="redshift">Redshift</option> -->
     </select>
     <label
       class="input input-bordered flex items-center gap-4"
