--- a/workbench/client/src/app/components/organisms/dialogs/import-synopsis-dialog/import-synopsis-dialog.component.html
+++ b/workbench/client/src/app/components/organisms/dialogs/import-synopsis-dialog/import-synopsis-dialog.component.html
@@ -15,6 +15,19 @@
         class="grow"
       />
     </label>
+    
+    <select
+      [(ngModel)]="selectedDatabaseId"
+      class="select select-bordered"
+    >
+      <option [ngValue]="null">No Database Selected</option>
+      @for (database of databases(); track database) {
+        <option [ngValue]="database.id">
+          {{ database.name }} ({{database.host | ipAnonymization }}:{{ database.port}})
+        </option>
+      }
+    </select>
+
     <input
       type="file"
       (change)="onFileChange($event)"
